[package]
name = "prometheus-parser"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>", "Duy Do <juchiast@gmail.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "~1.9.2"
nom = "7.1.3"
num_enum = "0.5.9"
prost = "0.11.6"
prost-types = "0.11.6"
snafu = { version = "0.7" }
vector-common = { path = "../vector-common", features = ["btreemap"] }
value = { path = "../value", features = ["json"] }

[build-dependencies]
prost-build = "0.11.6"
