[package]
name = "prometheus-parser"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>", "Duy Do <juchiast@gmail.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap.workspace = true
nom.workspace = true
prost.workspace = true
prost-types.workspace = true
snafu.workspace = true
vector-common = { path = "../vector-common", features = ["btreemap"] }

[build-dependencies]
prost-build.workspace = true
